# libezmb

./: Makefile  app  client  client.c  client.lua  collector.lua  config.json  e_config  e_device.c  e_device.h  e_device_lua copy.c  e_device_lua.c  e_plugin_demo.c  e_plugin_driver copy.c  e_plugin_driver.c  e_plugin_driver.h  e_proxy.c  e_serial  e_serial.c  e_serial_coll  e_serial_coll.c  e_serial_config.c  e_serial_config.h  e_serial_manager.c  e_serialport.c  e_serialport.h  e_tcp_server.c  e_tcp_server.h  ezmb.h  libezmb.pc  mk.sh  monitor  monitor.c  monitor.lua  muilt.c  plugin_elf.c  pub.py  sub.py  test  test.c
actuator/tcp_server/: CMakeLists.txt  Makefile  e_tcp_server.c  e_tcp_server.h  e_tcp_server_config.c  e_tcp_server_config.h  main.c
collector/serial/: CMakeLists.txt  Makefile  main.c
core/: CMakeLists.txt  Makefile  e_device.c  e_plugin_driver.c  e_plugin_driver.h  e_proxy.c  e_proxy.h  e_queue.c  e_queue.h  e_serial_config.h  e_serial_manager.h
test/: plug.lua  plug.md  pub.py  sub.py
